--- a/Masterarbeit.tex
+++ b/Masterarbeit.tex
@@ -449,14 +449,14 @@ The usage of MC event generators, such as PYTHIA or HIJING, allows to obtain the
 Considering the particle type dependency of the efficiency, the abundance of each particle plays an important role and must therefore be reflected in the correction. However, MC event generators have limitations in the description of the particle production, specially in the one regarding strange particles (cite 38,39 paper). As consequence, the efficiency is considerably affected by this underestimation and a correction by means of a reweighting of the efficiency with the relative abundance of each particle type is implemented. The right plot of Figure \ref{trckEffParticles} shows the relative abundances measured in pp collisions recorded by ALICE at $\sqrt{s} = 7$ TeV. This center-of-mass energy will be used since no significant energy dependence has been observed experimentally and because of the lack of experimental data at the energy studied in this work (cite Patrick). These distributions were calculated using a data-driven procedure detailed in the cited analysis.\\
 In summary, the overall efficiency for inclusive particles should be understood as a weighted superposition of the individual efficiencies for each particle type with the relative particle abundances. After applying this reweighting on the distributions represented in Figures \ref{trckEffpp} and \ref{trckEffPbPb2} with open symbols, the corrected tracking efficiencies for inclusive particle are obtained and shown in these same figures with full markers. These distributions are utilized ultimately to correct the \pt distributions. 
 \subsection{Contamination by secondary particles}
+Despite the selection procedure described in Section \ref{TrackSelection}, which aims to reduce the contamination of the measured track sample with secondary particles, a small amount of these particles persists in it. This remnant originates from weak decays of kaons, $\Lambda$ baryons and muons as well as by interactions in the detector material. The remaining fraction of secondary particles has to be subtracted from the \pt distributions to ensure purity of the data.\\
+The estimation of contamination by secondaries is carried out using the MC productions anchored to the analysed data periods. In Figure \ref{SecCont}, the result of these estimations can be seen with open markers for pp collisions as well as for MB, central ($0-5$\%), semi-central ($30-40$\%) and peripheral ($70-80$\%) Pb-Pb collisions. In general, a contamination of around  $10\%$ at low \pt can be observed. The distributions then fall monotonously with increasing \pt up to bellow $1\%$ in the high \pt region. These observations are consistent with the assumption that secondaries are inclined to carry small momenta since they correspond essentially to fractions of the momenta of the mother particles. A dependency of the contamination on the centrality is observed in Pb-Pb collisions. At low $p_\text{T}$, the contamination in central collisions ($0-5$\%) amounts to almost twice as much as the contamination in the most peripheral ($70-80$\%) collisions. This is a result of a suppression of the yield of strange particles observed in systems with low energy densities (cite here). The dependence on the centrality dissipates in the high $p_\text{T}$ range.
 \begin{figure}[tb!]
 \centering
 \includegraphics[width=12cm]{Plots/secCont.pdf}  
 \caption{Contamination with secondary particles as function of the transverse momentum obtained from MC simulations for pp collisions as well as central, semi-central and peripheral Pb-Pb collisions. Open markers represent the secondary contamination obtained from pure MC, while the full ones correspond to the  corrected contamination.}
 \label{SecCont}
 \end{figure}
-Despite the selection procedure described in Section \ref{TrackSelection}, which aims to reduce the contamination of the measured track sample with secondary particles, a small amount of these particles persists in it. This remnant originates from weak decays of kaons, $\Lambda$ baryons and muons as well as by interactions in the detector material. The remaining fraction of secondary particles has to be subtracted from the \pt distributions to ensure purity of the data.\\
-The estimation of contamination by secondaries is carried out using the MC productions anchored to the analysed data periods. In Figure \ref{SecCont}, the result of these estimations can be seen with open markers for pp collisions as well as for MB, central ($0-5$\%), semi-central ($30-40$\%) and peripheral ($70-80$\%) Pb-Pb collisions. In general, a contamination of around  $10\%$ at low \pt can be observed. The distributions then fall monotonously with increasing \pt up to bellow $1\%$ in the high \pt region. These observations are consistent with the assumption that secondaries are inclined to carry small momenta since they correspond essentially to fractions of the momenta of the mother particles. A dependency of the contamination on the centrality is observed in Pb-Pb collisions. At low $p_\text{T}$, the contamination in central collisions ($0-5$\%) amounts to almost twice as much as the contamination in the most peripheral ($70-80$\%) collisions. This is a result of a suppression of the yield of strange particles observed in systems with low energy densities (cite here). The dependence on the centrality dissipates in the high $p_\text{T}$ range.
 \subsubsection{Secondary scaling}
 %cite TFractionFitter A la HMCMLL, see R. Barlow and C. Beeston, Comp. Phys. Comm. 77 (1993) 219-228, and http://www.hep.man.ac.uk/~roger/hfrac.f
 \begin{figure}[tb!]
@@ -613,15 +613,49 @@ $\chi^2$ TPC constrained track vs. global track  & $\leq 36$ & $\leq 25$ & $\leq
 \caption{Variations for the standard track selection criteria used for the calculation of the systematic uncertainties.}
 \label{tab:curVar}
 \end{table}
-The \pt distributions as well as the nuclear modification factors are affected by uncertainties product of inaccuracies in the measurement instruments or assumptions made during the development of the analysis approaches. These are the so-called systematic uncertainties. In this thesis, the source of systematics considered arises from the track selection criteria and from the secondary scaling correction. However, other sources of systematic uncertainties have been identified in a previous analysis of nuclear modification factors (cite paper). In this chapter, these sources will be described and its impact on the \pt distributions approximated.\\
-Each source of systematic uncertainty $\sigma^\text{sys}_\text{i}$ contributes to the total systematic uncertainties $\sigma^\text{sys}_\text{tot}$ independently of the rest. For this reason, the total value of $\sigma^\text{sys}_\text{tot}$ is calculated via the root sum squared method:
-\begin{equation}
-\sigma^\text{sys}_\text{tot} = \sqrt{\sum_{\text{i}}\sigma^\text{sys}_\text{i}}
-\end{equation}
-In the following sections, the approaches applied for the calculation of the individual contributions $\sigma^\text{sys}_\text{i}$ are explained in detail. 
+The \pt distributions as well as the nuclear modification factors are affected by uncertainties product of inaccuracies in the measurement instruments or assumptions made during the development of the analysis approaches. These are the so-called systematic uncertainties. In this thesis, the source of systematics considered arises from the track selection criteria. However, other sources of systematic uncertainties have been identified in a previous analysis of nuclear modification factors (cite paper). In this chapter, these sources will be described and its impact on the \pt distributions approximated.
 \subsection{Track selection} 
-As in Section \ref{TrackSelection} explained, the track selection has been develop in the course of the years and validated through cross-checks. Nevertheless, the choice of the selection criteria, yet justified via these studies, is subjected to a systematic uncertainty. Each criterion contributes independently of the rest to the systematic uncertainties of the \pt spectra, and as a consequence, of the nuclear modification factors. For this reason, the total value of the systematic uncertainty $\sigma^\text{sys}_\text{sel,tot}$ results from the root sum squared over individual ones $\sigma^\text{sys}_\text{sel,i}$ .\\
-To determine the individual contributions, each nominal track requirement listed in Table \ref{tab:Cuts} is varied twice within a range in which it is believed to be physically meaningful. The variations correspond to the maximum and the minimum of this range. The mentioned variations are listed in Table \ref{tab:curVar}. Next, the calculation of fully corrected \pt distributions is repeated by performing one variation at a time. These \pt distributions are compared to the nominal one by means of a ratio, obtaining as result two ratios for each track cut, with the exception of the required hit in the SPD. Finally, the two ratios are evaluated in each \pt interval and the largest deviation from the nominal \pt spectrum between the both of them is assumed as systematic uncertainty in the corresponding \pt interval. Thereby, the systematic uncertainty corresponding to each track cut is presented as function of \pt as shown in Figure \ref{sysUnc}. The total systematic uncertainty is calculated subsequently applying a root sum squared in each \pt interval among the individual systematic uncertainties. This same approach is also applied to determine the systematic uncertainties that affect the nuclear modification factors as seen in Figure \ref{Raa}.\\
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.495\textwidth]{Plots/SysUncpp.pdf}  
+\includegraphics[width=0.495\textwidth]{Plots/SysUncpp.pdf}  
+\includegraphics[width=0.495\textwidth]{Plots/SysUncpp.pdf}  
+
+\caption{Contributions of the track selection criteria to the sysmtetic uncertainty for pp collisions.}
+\label{SysUncpp}
+\end{figure}
+\begin{figure}[H]
+\centering
+\caption{Contributions of the track selection criteria to the sysmtetic uncertainty for central Pb-Pb collisions.}
+\label{SysUncpp}
+\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[width=9cm]{Plots/SysUncPbPbperi.pdf}  
+\caption{Contributions of the track selection criteria to the sysmtetic uncertainty for peripheral Pb-Pb collisions.}
+\label{SysUncpp}
+\end{figure}
+As in Section \ref{TrackSelection} explained, the track selection has been develop in the course of the years and validated through cross-checks. Nevertheless, the choice of the selection criteria, yet justified via these studies, is subjected to a systematic uncertainty. Each criterion contributes independently of the rest to the systematic uncertainties of the \pt spectra, and as a consequence, of the nuclear modification factors. For this reason, the total value of $\sigma^\text{sys}_\text{tot}$ is calculated via the root sum squared method:
+\begin{equation}
+\sigma^\text{sys}_\text{sel,tot} = \sqrt{\sum_{\text{i}}\sigma^\text{sys}_\text{sel,i}}
+\end{equation} 
+To determine the individual contributions, each nominal track requirement listed in Table \ref{tab:Cuts} is varied twice within a range in which it is believed to be physically meaningful. The variations correspond to the maximum and the minimum of this range. The mentioned variations are listed in Table \ref{tab:curVar}. Next, the calculation of fully corrected \pt distributions is repeated by performing one variation at a time. These \pt distributions are compared to the nominal one by means of a ratio, obtaining as result two ratios for each track cut, with the exception of the required hit in the SPD. Finally, the two ratios are evaluated in each \pt interval and the largest deviation from the nominal \pt spectrum between the both of them is assumed as systematic uncertainty in the corresponding \pt interval. Thereby, the systematic uncertainty corresponding to each track cut is presented as function of \pt. The total systematic uncertainty is calculated subsequently applying a root sum squared in each \pt interval among the individual systematic uncertainties. This is given in Figures \ref{SysUncpp}, \ref{SysUncPbPbcent}, \ref{SysUncPbPbsemi} and \ref{SysUncPbPbperi} for pp as well as for central and peripheral Pb-Pb collisions. This same approach is also applied to determine the systematic uncertainties that affect the nuclear modification factors as seen in Figure \ref{Raa}.
+\subsection{Other sources} 
+In previous analyses of inclusive charged particles (cite paper), other sources of systematic uncertainties on the \pt distributions besides the track selection have been identified. In this section, an overview about the corresponding sources as well as an approximation of the contributions will be given. In Table \ref{tab:OtherSources}, the relative systematic uncertainties for \pt spectra in pp and Pb-Pb collisions are shown. 
+\begin{enumerate} 
+\item The tracking efficiency is approximated using the MC information. Nevertheless, the simulations are not able  to reproduce all detector effects. The related systematic uncertainty is calculated by means of a quantity that compares global tracks with tracks reconstructed only with the TPC, the matching efficiency. The maximum deviation of the ratio of the matching efficiency in MC to the one in data is used to estimate the corresponding uncertainty.
+\item There are three distinct contributions to the systematic uncertainty of the particle composition correction (cite Patrick). For their calculation, variations of parameters of the approach are carried out and the maximal deviation between the nominal correction and the one resulting from each variation is assigned as systematic uncertainty. The total systematic uncertainty is determined by summing in quadrature the individual contributions which are summarized in the following:
+\begin{itemize}
+\item The first contribution is related to measured production rates of identified charged particles. The measured particle spectrum of each particle type are varied between the extreme values of the range of its systematic uncertainty.
+\item Another contribution arises from the extrapolation of the \pt spectra at low \pt used in the correction. The contribution is determined by recalculating the correction using alternative parametrizations as well as different fit ranges.
+\item The last contribution originates from the fact that the relative particle abundances are assumed to be flat for $p_\text{T} > 8$. For the calculation, this range is varied and the corresponding deviations determined.  
+\end{itemize} 
+\item The contribution to the systematic uncertainties o the scaling of the secondary contamination is recalculated by using the same approach with a different number of templates and assigning the deviation between both results as uncertainty.
+\item In the published results, the vertex and trigger efficiency were combined and the half of this value was assigned as systematic uncertainty.
+\item The approximation of the effects of the detector material by the the detector response simulator is related to a systematic uncertainty. Through an analysis of photon conversions, the related systematic uncertainty is found varying the material budged in the simulation by $\pm 4.5\%$.
+\item The determination of anchor point is also subject to an uncertainty established in the publication at  $0.5\%$. After adjusting the centrality boundaries with this uncertainty, \pt spectra are recalculated and the maximum deviation from the nominal one is assigned as the corresponding contribution.
+
+\end{enumerate} 
 
 \chapter{Results}
 \begin{appendices}
